--- a/style.css
+++ b/style.css
@@ -670,7 +670,7 @@ body {
 }
 
 .ft-ctn {
-  background: rgb(58, 48, 48);
+  background: #131313;
   text-align: center;
   padding: 30px;
 }
@@ -701,7 +701,7 @@ body {
 }
 
 .ft-ctn-2 {
-  background: rgb(26, 25, 25);
+  background: #000;
   text-align: center;
   font-size: 14px;
   padding: 30px;
@@ -763,7 +763,7 @@ body {
 
 /* Media queriers */
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .top-cnt {
     display: none;
   }
@@ -806,7 +806,7 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .header1 {
     display: none;
   }
@@ -835,8 +835,8 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    height: 475px;
-    padding: 2px 3px;
+    height: 600px;
+    padding: 2px 0;
     width: 100%;
   }
 
